@@ -1147,9 +1147,18 @@ lay them out using wxSizers, absolute positioning, everything you like!
                                 <object class="wxTreebook" name="controls_treebook">
                                     <size>350,280</size>
                                     <style>wxSUNKEN_BORDER</style>
+                                    <imagelist>
+                                        <size>16,16</size>
+                                        <bitmap stock_id="wxART_HELP_BOOK"/>
+                                        <bitmap stock_id="wxART_QUESTION"/>
+                                        <bitmap stock_id="wxART_INFORMATION"/>
+                                        <bitmap stock_id="wxART_GO_HOME"/>
+                                    </imagelist>
                                     <object class="treebookpage">
                                         <label>Page 1</label>
                                         <depth>0</depth>
+                                        <image>0</image>
+                                        <expanded>1</expanded>
                                         <object class="wxButton" name="controls_treebook_button1">
                                             <size>200,180</size>
                                             <label>Button N1</label>
@@ -1158,10 +1167,13 @@ lay them out using wxSizers, absolute positioning, everything you like!
                                     <object class="treebookpage">
                                         <label>Empty Page 2</label>
                                         <depth>1</depth>
+                                        <image>1</image>
+                                        <expanded>1</expanded>
                                     </object>
                                     <object class="treebookpage">
                                         <label>Page 3</label>
                                         <depth>2</depth>
+                                        <image>2</image>
                                         <object class="wxButton" name="controls_treebook_button3">
                                             <size>200,180</size>
                                             <label>Button N3</label>
@@ -1170,6 +1182,7 @@ lay them out using wxSizers, absolute positioning, everything you like!
                                     <object class="treebookpage">
                                         <label>Page 4</label>
                                         <depth>1</depth>
+                                        <image>3</image>
                                         <object class="wxButton" name="controls_treebook_button4">
                                             <size>200,180</size>
                                             <label>Button N4</label>
