@@ -446,6 +446,7 @@ All (GUI):
 - Support float, double and file name values in wxGenericValidator (troelsk).
 - Fix keyboard navigation in wxGrid with hidden columns (ivan_14_32).
 - Add wxDataViewEvent::IsEditCancelled() (Allonii).
+- Allow marking wxTreeBook nodes to expand initially in XRC (RedTide).
 
 OSX:
 
